--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.67.4",
     "react-native-safe-area-context": "^4.2.2",
     "react-native-screens": "^3.13.1",
+    "react-native-splash-screen": "^3.3.0",
     "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
