--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@react-navigation/native-stack": "^6.5.2",
     "@react-navigation/stack": "^6.1.1",
     "axios": "^0.26.1",
+    "native-base": "^3.3.8",
     "react": "17.0.2",
     "react-native": "0.67.4",
     "react-native-loading-spinner-overlay": "^3.0.0",
     "react-native-safe-area-context": "^4.2.2",
     "react-native-screens": "^3.13.1",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^12.3.0",
+    "react-native-vector-icons": "^9.1.0",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
