--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/native-stack": "^6.5.2",
     "@react-navigation/stack": "^6.1.1",
     "axios": "^0.26.1",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "native-base": "^3.3.8",
     "react": "17.0.2",
     "react-native": "0.67.4",
