--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "17.0.2",
     "react-native": "0.67.4",
     "react-native-loading-spinner-overlay": "^3.0.0",
+    "react-native-location": "^2.5.0",
     "react-native-safe-area-context": "^4.2.2",
     "react-native-screens": "^3.13.1",
     "react-native-splash-screen": "^3.3.0",
