--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "native-base": "^3.3.8",
     "react": "17.0.2",
     "react-native": "0.67.4",
+    "react-native-get-location": "^2.2.1",
     "react-native-loading-spinner-overlay": "^3.0.0",
     "react-native-location": "^2.5.0",
     "react-native-safe-area-context": "^4.2.2",
