Mod: Added fallback if there is errot while reading location

--- a/ios/AirQualityIndex/Info.plist
+++ b/ios/AirQualityIndex/Info.plist
@@ -51,6 +51,8 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We would like to get your location to show you AQI Details</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>AntDesign.ttf</string>
